Thu Nov 21 20:56:35 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: should not overwrite Host: header.

Tue Nov 19 05:16:23 2002  Akinori MUSHA  <knu@iDaemons.org>

	* instruby.rb: Do not install various working files under bin/.

Tue Nov 19 02:34:18 2002  Akinori MUSHA  <knu@iDaemons.org>

	* bin/irb: Moved from sample/irb.rb.

	* instruby.rb: Install script files under bin/ with ruby's program
	  prefix and suffix.

	* instruby.rb: Rewrite installed scripts' shebang lines.

Mon Nov 18 02:59:31 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb: Make this libary thread safe.

	* lib/tempfile.rb: Do not pick a name which was once used and is
	  still scheduled for removal.

	* lib/tempfile.rb: A lock file need not and must not be scheduled
	  for removal.

	* lib/tempfile.rb: Compare Max_try with the number of mkdir
	  failures instead of the suffix counter.

	* lib/tempfile.rb: Overall cleanup and add some important notices.

Fri Nov 15 07:51:24 2002  NAKAMURA Hiroshi  <nakahiro@sarion.co.jp>

	* ostruct.rb: fix a bug in inspect which called String#+ with Symbol.
	  [ruby-dev:18788]

	* profile.rb: illegal use of Array#sort!.  replaced it with non-bang
	  method.  [ruby-dev:18792]

Sat Nov  9 16:06:57 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tcltklib/stubs.c: should include "util.h" for ruby_strdup.

Fri Nov  8 22:11:56 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.8 release candidate.

Fri Nov  8 22:10:51 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): removed unnecessary toplevel check.

Thu Nov  7 09:51:37 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (blk_orphan): a block created in a different thread is
	  orphan.  [ruby-dev:17471]

Mon Nov  4 04:04:32 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/getopts.rb: Do not choke on characters that cannot be used
	  in a variable name.  Replace them with `_'.  Define a hash named
	  $OPT for convenience.
